updated 12/6/2026